--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1313,10 +1313,26 @@
     },
     {
       "cell_type": "code",
-      "source": "!jupyter nbconvert --to pdf my_notebook.ipynb",
+      "source": "# !pip install nbconvert\n!jupyter nbconvert --to pdf notebook.ipynb",
       "metadata": {
         "tags": [],
         "cell_id": "00068-30806fab-131b-40d9-b8d9-1451fdfcad0b",
+        "deepnote_to_be_reexecuted": false,
+        "source_hash": null,
+        "execution_millis": 1987,
+        "execution_start": 1617951333518,
+        "output_cleared": true,
+        "deepnote_cell_type": "code"
+      },
+      "outputs": [],
+      "execution_count": 389
+    },
+    {
+      "cell_type": "code",
+      "source": "",
+      "metadata": {
+        "tags": [],
+        "cell_id": "00081-cd9dd471-6602-4f1f-be48-46aaa504fae6",
         "deepnote_cell_type": "code"
       },
       "outputs": [],
